--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "ru.hh.headhunterclient"
         minSdkVersion 15
@@ -36,8 +36,8 @@ android {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -51,21 +51,17 @@ dependencies {
 
     // support
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
 
     // common
     compile 'com.jakewharton.timber:timber:4.5.1'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.annimon:stream:1.1.8'
     compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC3'
 
     // ui
-    compile 'com.github.bumptech.glide:glide:3.8.0'
-    compile 'com.github.johnkil.android-robototextview:robototextview:3.0.0'
-    compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.github.johnkil.android-robototextview:robototextview:4.0.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
