--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
 
+    // firebase
+    compile 'com.google.firebase:firebase-core:11.4.2'
+    compile 'com.google.firebase:firebase-messaging:11.4.2'
+    compile 'com.firebase:firebase-jobdispatcher:0.8.4'
+
     // common
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC3'
@@ -82,3 +87,5 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
